# zelos-extension-uds

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  config.schema.json  extension.toml  main.py  pyproject.toml
.github/workflows/: release.yml
scripts/: bump_version.py  package_extension.py
tests/: conftest.py  test_extension.py  test_uds_basic.py  test_uds_transactions.py
zelos_extension_uds/: __init__.py  extension.py  logging.py
zelos_extension_uds/cli/: __init__.py  app.py  clear.py  dtc.py  flash.py  io.py  operations.py  read.py  reset.py  routine.py  security.py  session.py  tp.py  utils.py  write.py
zelos_extension_uds/utils/: __init__.py  hex_utils.py
