[project]
name = "zelos-extension-uds"
version = "0.1.2"
description = "Unified Diagnostic Services (UDS) extension for Zelos"
authors = [{ name = "zelos", email = "info@zeloscloud.io" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["zelos", "extension"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "zelos-sdk",
    "udsoncan>=1.21.0",
    "python-can>=4.0.0",
    "can-isotp>=2.0.0",
    "rich-click>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/zelos/zelos-extension-uds"
Repository = "https://github.com/zelos/zelos-extension-uds"
Issues = "https://github.com/zelos/zelos-extension-uds/issues"
Documentation = "https://docs.zeloscloud.io/extensions"

[project.scripts]
zelos-extension-uds = "main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
    "tomli>=2.3.0; python_version < '3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zelos_extension_uds"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-cli-level=INFO"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "B008",   # function call in defaults (common in decorators)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["PTH123"]  # Allow open() in scripts

[tool.ruff.lint.pydocstyle]
convention = "google"
